tuzatishlar kiritildi
