# api/handler/docs/swagger.json
@@ -28,11 +28,16 @@
                 "summary": "List Travel Destinations",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page limit",
+                        "name": "limit",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -75,6 +80,14 @@
                     "Destinations"
                 ],
                 "summary": "Get Trend Travel Destinations",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Top Destination",
+                        "name": "Top",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -169,15 +182,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -470,15 +481,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -575,15 +584,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -832,15 +839,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -965,7 +970,7 @@
                 }
             }
         },
-        "/api/v1/traveltips": {
+        "/api/v1/travel-tips": {
             "post": {
                 "security": [
                     {
@@ -1016,7 +1021,7 @@
                 }
             }
         },
-        "/api/v1/traveltips/{tipId}": {
+        "/api/v1/travel-tips/": {
             "get": {
                 "security": [
                     {
@@ -1039,18 +1044,16 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Category",
                         "name": "category",
                         "in": "query",
@@ -1102,15 +1105,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page limit",
                         "name": "limit",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1429,7 +1430,7 @@
                 }
             }
         },
-        "/api/v1/users/{userId}/statistics": {
+        "/api/v1/users/{userId}/statics": {
             "get": {
                 "security": [
                     {
@@ -1963,7 +1964,10 @@
                     "type": "string"
                 },
                 "destinations": {
-                    "$ref": "#/definitions/itineraries.Destination"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/itineraries.Destination"
+                    }
                 },
                 "end_date": {
                     "type": "string"
@@ -2017,10 +2021,13 @@
         "itineraries.LeaveCommentRequest": {
             "type": "object",
             "properties": {
+                "author_id": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 },
-                "id": {
+                "itinerary_id": {
                     "type": "string"
                 }
             }
@@ -2028,7 +2035,7 @@
         "itineraries.LeaveCommentResponse": {
             "type": "object",
             "properties": {
-                "athor_id": {
+                "author_id": {
                     "type": "string"
                 },
                 "content": {
